------------------------------------------------------------------------
r2065 | gaser | 2022-08-02 18:01:50

Changed paths:
 M CHANGES.txt
 M cat_conf_factorial.m
 M cat_main_reportfig.m
 M cat_run.m
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m
 M cat_surf_display.m


Fixed:   Corrected handling of long. designs with one group in 
         cat_conf_factorial.m.
Changed: Replaced flip command by flipud for compatibility reasons.
Changed: For long. designs subjects are now always displayed as separate 
         boxplot in cat_stat_homogeneity.m.
Changed: Many changes to cat_stat_homogeneity.m to remove inconsistencies.
------------------------------------------------------------------------
r2064 | gaser | 2022-08-02 00:55:59

Changed paths:
 M CHANGES.txt
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m


Changed: Disabled adjustment with design matrix for long. data in 
         cat_stat_check_SPM.m
Changed: many changes to cat_stat_homogeneity.m:
         - Added colored connected lines to long. designs w.r.t. difference 
           between time points.
         - Corrected image intensity in slice display.
         - Behaviour for removing data has changed.
------------------------------------------------------------------------
r2063 | gaser | 2022-08-01 12:01:11

Changed paths:
 M CHANGES.txt
 M cat_conf_factorial.m
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m
 M cat_surf_render2.m
 M cat_surf_results.m
 M tbx_cfg_cat.m


Changed: Extended options for defining long. designs in cat_conf_factorial.m. 
Changed: Some smaller changes for catching errors in cat_surf_results.m.
Changed: Chnaged position and size of render views in cat_stat_homogeneity.m.
Fixed:   Corrected wrong marker in cat_stat_homogeneity.m.
------------------------------------------------------------------------
r2062 | gaser | 2022-08-01 09:06:04

Changed paths:
 M CHANGES.txt
M  cat_stat_homogeneity.m


Added:   Corrected display of meshes for long. designs in 